update libraries and readme to - run the dev on internal wifi IP address accesible for testing on mobile devices (eg: 192.168.0.14:3333) - fixed styling of sidebar on mobile - fixed styling of table columns - fixed mobile card appearance on ListView

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -16,10 +16,6 @@
 @import 'partials/footer';
 // @import 'partials/beta';
 
-// * {
-//   border-radius: 0;
-// }
-
 html,
 body,
 #app {
@@ -29,10 +25,7 @@ body,
 * {
   box-sizing: border-box;
 }
-// body {
-//   font-size: calc(16px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
-//   line-height: calc(1.3 + (1.5 - 1.2) * ((100vw - 300px) / (1600 - 300)));
-// }
+// iphone notch mitigation
 @supports (padding: max(16px)) {
   body {
     padding: constant(safe-area-inset-top) constant(safe-area-inset-right)
@@ -155,9 +148,7 @@ footer {
 .table-link {
   color: #4573d6;
 }
-.justify-center {
-  justify-content: center;
-}
+
 .homepage-btns {
   .card:first-of-type {
     margin-right: 1rem;
@@ -194,25 +185,28 @@ footer {
 .is-gradient {
   background-color: hsl(0, 0%, 96%);
 }
+.justify-center {
+  justify-content: center;
+}
 .justify-between {
   justify-content: space-between;
 }
 .justify-end {
   justify-content: flex-end;
 }
-.py-2 {
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-}
-.pt-5 {
-  padding-top: 3rem;
-}
+// .py-2 {
+//   padding-bottom: 1rem;
+//   padding-top: 1rem;
+// }
+// .pt-5 {
+//   padding-top: 3rem;
+// }
 ::placeholder {
   color: rgba(255, 255, 255, 0.5);
 }
-.pa-2 {
-  padding: 1rem;
-}
+// .pa-2 {
+//   padding: 1rem;
+// }
 
 .fa-w-14 {
   font-size: 1.2rem;
@@ -223,20 +217,24 @@ footer {
 }
 
 h1 {
-  font-size: clamp(2.2rem, 4vw, 2.7rem);
+  font-size: clamp(2.2rem, 4vw, 2.3rem);
 }
 h2 {
-  font-size: clamp(2rem, 3.6vw, 2.5rem);
+  font-size: clamp(2rem, 3.6vw, 2.1rem);
 }
 h3 {
-  font-size: clamp(1.8rem, 3.2vw, 2.3rem);
+  font-size: clamp(1.8rem, 3.2vw, 1.9rem);
 }
 h4 {
-  font-size: clamp(1.6rem, 2.8vw, 2.1rem);
+  font-size: clamp(1.6rem, 2.8vw, 1.7rem);
 }
 h5 {
-  font-size: clamp(1.4rem, 2.4vw, 1.9rem);
+  font-size: clamp(1.4rem, 2.4vw, 1.5rem);
 }
 h6 {
-  font-size: clamp(1.2rem, 2vw, 1.7rem);
+  font-size: clamp(1.2rem, 2vw, 1.3rem);
+}
+.b-tabs .tab-content {
+  padding-left: 0;
+  padding-right: 0;
 }
