--- a/assets/scss/partials/_products.scss
+++ b/assets/scss/partials/_products.scss
@@ -1,6 +1,6 @@
 .small-logo {
-  height: 50px;
-  max-width: unset;
+  max-height: 70px;
+  // max-width: 100%;
   object-fit: contain;
 }
 .is-column {
